--- a/static/cgit.css
+++ b/static/cgit.css
@@ -967,3 +967,10 @@ div#cgit table.ssdiff td.space {
 div#cgit table.ssdiff td.space div {
 	min-height: 3em;
 }
+
+@font-face {
+	font-family: 'Source Code Pro';
+	font-style: normal;
+	font-weight: 400;
+	src: url('source_code_pro.woff2') format('woff2');
+}
