--- a/static/cgit.css
+++ b/static/cgit.css
@@ -974,3 +974,7 @@ div#cgit table.ssdiff td.space div {
 	font-weight: 400;
 	src: url('source_code_pro.woff2') format('woff2');
 }
+
+pre {
+	font-family: 'Source Code Pro', monospace;
+}
