--- a/static/cgit.css
+++ b/static/cgit.css
@@ -79,7 +79,7 @@ body {
 div#cgit {
 	padding: 0em;
 	margin: 0em;
-	font-family: sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 10pt;
 	color: #ccc;
 	padding: 4px;
